<resources>
    <string name="app_name">Jobs.GM</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_chats">Chats</string>
    <string name="facebook_app_id">[194337235144569]</string>
    <string name="fb_login_protocol_scheme">fb[194337235144569]</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_code_number">Invalid code</string>
    <string name="resent_code_sms">Resend code</string>
    <string name="enter_code">Enter code</string>
    <string name="send_sms_description">We\'ve  sent the code to the number \n%1$s , please enter the code received</string>
    <string name="chose_a_country">Choose county</string>
    <string name="search">Search</string>
    <string name="error_no_internet">Check internet connection</string>
    <string name="sms_code_send_your_phone">The code has been sent to your number via SMS</string>
    <string name="sms_timer">Resending code\after %1$s seconds</string>
    <string name="btn_next">Next</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_desc">Job search has never been so easy</string>
    <string name="phone_number_title">Phone number</string>
    <string name="phone_number_code_title">Confirmation code</string>
    <string name="profile_name_hint">Full name</string>
    <string name="profile_photo_info">Upload your photo in high quality</string>
    <string name="profile_edu_title">Education</string>
    <string name="profile_work_title">Experience</string>
    <string name="add_more">+ Add more</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="profile_edu_speciality">Major</string>
    <string name="profile_edu_name">University name</string>
    <string name="profile_work_company">Company name</string>
    <string name="profile_work_position">Position</string>
    <string name="loading_text">Loading…</string>
    <string name="selected_sphere_count">Selected %d</string>
    <string name="activity_filter_title">Filters</string>
    <string name="sphere_title">Sectors</string>
    <string name="filter_info_text">Choose area of work and sectors you are interested in</string>
    <string-array name="education_type">
        <item>Higher education</item>
        <item>Incomplete higher education</item>
        <item>Vocational education</item>
        <item>Secondary education</item>
        <item>Incomplete secondary education</item>
    </string-array>
    <string-array name="employment_types" translatable="false">
        <item>Full</item>
        <item>Part-time</item>
        <item>Internship</item>
        <item>Temporary</item>
        <item>Remote</item>
    </string-array>
    <string-array name="salary_types">
        <item>Fixed</item>
        <item>Range (according to the interview results)</item>
        <item>Do not specify (according to the interview results)</item>
    </string-array>
    <string-array name="salary_type_ids">
        <item>fixed</item>
        <item>range</item>
        <item>undefined</item>
    </string-array>
    <string-array name="schedules" >
        <item>@string/schedules_1</item>
        <item>@string/schedules_2</item>
        <item>@string/schedules_3</item>
        <item>@string/schedules_4</item>
    </string-array>
    <string name="schedules_1">Flexible</string>
    <string name="schedules_2">Weekdays</string>
    <string name="schedules_3">Volunteering</string>
    <string name="schedules_4">Programs/scholarships</string>
    <string name="show_profile">Show profile</string>
    <string name="edit_text">Edit</string>
    <string name="request_switch_text">Job applications</string>
    <string name="request_switch_description">Notify when employers respond to requests</string>
    <string name="request_switch_description_for_employer">Notify when employees apply for a job</string>
    <string name="message_switch_text">New messages</string>
    <string name="message_switch_description">Notify when new messages are received</string>
    <string name="exit_text">Log out</string>
    <string name="about_text">About application</string>
    <string name="user_agreement_text">User agreement</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_logout_msg">Are you sure you want to log out?</string>
    <string name="employment_type_title">Employment type</string>
    <string name="schedule_title">Schedule</string>
    <string name="vacancy_ok">Apply</string>
    <string name="vacancy_next">Skip</string>
    <string name="about_company_text">About company</string>
    <string name="company_name_hint">Company name</string>
    <string name="employer_logo_info">Upload your company logo</string>
    <string name="city_hint">City, village or settlement</string>
    <string name="company_about_hint">About company</string>
    <string name="title_vacancy">Vacancy</string>
    <string name="vacancies">Vacancies</string>
    <string name="add_vacancy">+ Add vacancy</string>
    <string name="tab_vacancy_opened">Open</string>
    <string name="tab_vacancy_closed">Closed</string>
    <string name="sphere_hint">Sector</string>
    <string name="non_selected">Not chosen</string>
    <string name="schedule_title_2">Schedule</string>
    <string name="salary_title">Salary</string>
    <string name="vacancy_name">Title</string>
    <string name="vacancy_desc">Description</string>
    <string name="action_done">Done</string>
    <string name="salary_type_title">Type</string>
    <string name="salary_range_title">Size</string>
    <string name="salary_range_title_2">Salary range</string>
    <string name="save">Save</string>
    <string name="choose_region_hint">Choose region</string>
    <string name="your_role">Your goal</string>
    <string name="iam">I am</string>
    <string name="employer_text">Employer</string>
    <string name="employee_text">Employee</string>
    <string name="employer_desc">Employee search</string>
    <string name="employee_desc">Vacancy search</string>
    <string name="change_text">Change</string>
    <string name="chats_empty_title">Message list is empty</string>
    <string name="chats_empty_description">You can start the dialogue after the employer accepts your application.</string>
    <string name="chats_empty_description_for_employer">You can start the dialogue after you accept the employees\'s application.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="dialog_reject_text">Are you sure you want to reject this application ?</string>
    <string name="start_chat">Start the dialogue</string>
    <string name="action_edit_vacancy">Edit</string>
    <string name="action_close_vacancy">Close vacancy</string>
    <string name="action_open_vacancy">Open vacancy</string>
    <string name="choose_source">Choose</string>
    <string name="dialog_open_settings_text">Please give permission to the files.  Open settings?</string>
    <string name="dialog_storage_permission_text">I don\'t see the pictures, please give permission</string>
    <string name="chats_title">Chats</string>
    <string name="after_interview">According to the interview results</string>
    <string name="rejected">Rejected</string>
    <string name="waiting">Waiting</string>
    <string name="send_msg_hint">Send message …</string>
    <string name="notification_channel_message_name">Messages</string>
    <string name="notification_channel_application">Applications</string>
    <string name="notification_channel_other">Other</string>
    <string name="retry">Retry</string>
    <string name="notif_app_created_title">New application</string>
    <string name="notif_app_created_text">%s sent application</string>
    <string name="notif_app_accepted_title">Application is accepted</string>
    <string name="notif_app_accepted_text">%s accepted your application</string>
    <string name="employee_title">Employee</string>
    <string name="vacancy_title">Vacancy</string>
    <string name="text_about">Jobs.GM - application created specifically for the formation of direct contact between the employer and the employee in Gambia. If you are an employer looking for a highly qualified employee or an employee looking for a good job, then the Jobs.GM application is for you. Job search has never been so easy.
        \n\nThis mobile application was funded by the German Federal Government through Deutsche Gesellschaft für Internationale Zusammenarbeit (GIZ) GmbH in Gambia as part of the 2019 Skills for Reintegration pilot project.
    </string>
</resources>