<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:indeterminate="true"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/phone_number_code_title"
            android:textColor="@color/bluish_black"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/codeSms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/account_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/send_sms_description"
            android:textColor="@color/dark_grey_1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeSms" />

        <EditText
            android:id="@+id/codeSms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/edit_text_bg"
            android:digits="1234567890"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/enter_code"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="6"
            android:padding="15dp"
            android:textColor="@color/bluish_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <Button
            android:id="@+id/sendSmsCode"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_light_btn"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/resent_code_sms"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/bluish_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/bg_next_btn"
            android:drawableEnd="@drawable/ic_arrow_forward_white"
            android:drawablePadding="100dp"
            android:paddingEnd="12dp"
            android:paddingStart="20sp"
            android:text="@string/btn_next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>