<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.employer.edit.EditEmployerActivity">

    <include layout="@layout/appbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/avatar"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                app:backgroundImage="@color/mid_grey_2"
                app:layout_constraintBottom_toBottomOf="@+id/dash"
                app:layout_constraintEnd_toEndOf="@+id/dash"
                app:layout_constraintStart_toStartOf="@+id/dash"
                app:layout_constraintTop_toTopOf="@+id/dash"
                app:placeholderImage="@drawable/ic_location_city"
                app:roundAsCircle="true" />

            <ImageView
                android:id="@+id/dash"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/avatar_bg_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/employer_logo_info"
                app:layout_constraintBottom_toBottomOf="@+id/dash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dash"
                app:layout_constraintTop_toTopOf="@+id/dash" />

            <EditText
                android:id="@+id/name"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/company_name_hint"
                android:inputType="textPersonName|textCapWords"
                android:lines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dash" />

            <EditText
                android:id="@+id/about"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/company_about_hint"
                android:inputType="textCapSentences|textImeMultiLine|textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <EditText
                android:id="@+id/region"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black"
                android:focusable="false"
                android:inputType="text"
                android:hint="@string/choose_region_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about"
                tools:text="Чуйская область" />

            <EditText
                android:id="@+id/city"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/city_hint"
                android:inputType="textPersonName|textCapWords"
                android:lines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/region" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_next_btn"
                android:drawableEnd="@drawable/ic_arrow_forward_white"
                android:drawablePadding="100dp"
                android:paddingEnd="12dp"
                android:paddingStart="20sp"
                android:text="@string/btn_next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>